--- a/parlay_v24.2_clean.html
+++ b/parlay_v24.2_clean.html
@@ -646,6 +646,281 @@ function prob3W(lambdaH, lambdaA){
   return { home: roundTo(pH,4), draw: roundTo(pX,4), away: roundTo(pA,4) };
 }
 </script>
+  <!-- v24.2 ENHANCEMENTS — Tactical Matrix, Importance, ELO, Streak Momentum, PCS v4.1, dist/angle refinements -->
+<script>
+/* ===========================
+   Tactical Matrix (style effects)
+   - style: 'park', 'counter', 'highline', 'balanced'
+   - returns object with multipliers for atk/def/press
+=========================== */
+function tacticalStyleImpact(style){
+  style = (style||'balanced').toString().toLowerCase();
+  switch(style){
+    case 'park': // park the bus
+    case 'parked':
+      return { atkMult:0.78, defMult:1.18, pressMult:0.6, note:'Parked bus (defensive)' };
+    case 'counter':
+      return { atkMult:1.05, defMult:0.95, pressMult:0.95, note:'Counter-attacking' };
+    case 'highline':
+      return { atkMult:1.08, defMult:0.88, pressMult:1.05, note:'High line (vulnerable defense)' };
+    case 'gegen':
+    case 'highpress':
+      return { atkMult:1.03, defMult:0.92, pressMult:1.15, note:'High press (aggressive)' };
+    default:
+      return { atkMult:1.00, defMult:1.00, pressMult:1.00, note:'Balanced' };
+  }
+}
+
+/* ===========================
+   Importance Match Factor
+   - matchType: 'league','cup','ucl','friendly','nat_qual','wc'
+   - stage: optional string e.g. 'final','semi','group'
+   - returns multiplier for conservatism (reduces variance) and weight to lambda
+=========================== */
+function importanceFactor(matchType, stage){
+  const t = (matchType||'league').toString().toLowerCase();
+  let weight=1.0, confBoost=0.0;
+  if(t==='friendly'){ weight=0.92; confBoost= -0.03; } // friendlies more volatile
+  else if(t==='league'){ weight=1.00; confBoost=0.00; }
+  else if(t==='cup'){ weight=1.03; confBoost=0.03; }
+  else if(t==='ucl' || t==='champions' || t==='wc' || t==='nat_qual'){ weight=1.08; confBoost=0.06; }
+  // stage adjustments
+  if(stage){
+    const s = stage.toString().toLowerCase();
+    if(s==='final' || s==='semi') { weight *= 1.06; confBoost += 0.04; }
+    if(s==='group') { weight *= 1.00; }
+  }
+  // clamp
+  weight = clamp(weight, 0.85, 1.25);
+  confBoost = clamp(confBoost, -0.12, 0.18);
+  return { weight: roundTo(weight,3), confBoost: roundTo(confBoost,3) };
+}
+
+/* ===========================
+   ELO Influence
+   - simple elo diff conversion to lambda bias
+   - not overpowering: small multiplier
+=========================== */
+function eloInfluence(hElo,aElo){
+  const h = safeNum(hElo,1500);
+  const a = safeNum(aElo,1500);
+  const diff = clamp(h - a, -400, 400);
+  // convert to small multiplier: +200 -> ~1.06, -200 -> ~0.94
+  const multH = 1 + (diff/200) * 0.03; // 3% per 200 elo
+  const multA = 1 - (diff/200) * 0.03;
+  return { multH: clamp(multH,0.88,1.12), multA: clamp(multA,0.88,1.12), diff };
+}
+
+/* ===========================
+   Streak & Form Momentum
+   - compute simple recent form from HISTORY (window._PARLAY_HISTORY)
+   - returns momentum multiplier >1 boost for hot team, <1 for bad form
+=========================== */
+function streakMomentum(hTeamName, aTeamName, lookback=10){
+  const hist = (window._PARLAY_HISTORY || []).slice().reverse(); // most recent first
+  let hForm=0, aForm=0, hCnt=0, aCnt=0;
+  for(let i=0;i<hist.length && (hCnt<lookback || aCnt<lookback); i++){
+    const it = hist[i];
+    if(!it) continue;
+    // try names matching (case-insensitive)
+    try{
+      const hn = (it.home && it.home.name || '').toString().toLowerCase();
+      const an = (it.away && it.away.name || '').toString().toLowerCase();
+      if(hn && hn.indexOf((hTeamName||'').toLowerCase()) !== -1 && hCnt < lookback){
+        // compute result from final
+        const f = it.final || it.result || {};
+        const H = safeNum(f.H || f.lambdaH || 0);
+        const A = safeNum(f.A || f.lambdaA || 0);
+        if(H > A) hForm += 1; else if(H===A) hForm += 0.5; else hForm -= 0.5;
+        hCnt++;
+      }
+      if(an && an.indexOf((aTeamName||'').toLowerCase()) !== -1 && aCnt < lookback){
+        const f = it.final || it.result || {};
+        const H = safeNum(f.H || f.lambdaH || 0);
+        const A = safeNum(f.A || f.lambdaA || 0);
+        // note: from away's perspective: A > H => away win
+        if(A > H) aForm += 1; else if(H===A) aForm += 0.5; else aForm -= 0.5;
+        aCnt++;
+      }
+    }catch(e){}
+  }
+  // normalize to [-1..+1] roughly
+  const hScore = hCnt>0 ? (hForm / hCnt) : 0;
+  const aScore = aCnt>0 ? (aForm / aCnt) : 0;
+  // momentum multiplier: 1 + (score * 0.06) -> small effect
+  const mH = clamp(1 + (hScore) * 0.06, 0.88, 1.12);
+  const mA = clamp(1 + (aScore) * 0.06, 0.88, 1.12);
+  return { mH: roundTo(mH,3), mA: roundTo(mA,3), hScore:roundTo(hScore,3), aScore:roundTo(aScore,3) };
+}
+
+/* ===========================
+   Refined dist/angle heuristic
+   - Better use of Shots/SOT/Final3/Prog to create plausible shot locs
+=========================== */
+function refineShotLocation(team, opp){
+  try{
+    const shots = Math.max(1, safeNum(team.shots,10));
+    const sot = safeNum(team.sot,3);
+    const final3 = safeNum(team.final3, 14);
+    const prog = safeNum(team.prog,12);
+    const build = safeNum(team.build,5);
+    const oppDef = safeNum(autoExtractDefense(opp), 6);
+
+    // distance: base influenced by final3 and opponent defense
+    let dist = 16 - clamp(final3/20,0,1.8) * 3 - clamp(prog/30,0,1.2) * 1.6 + clamp((oppDef/30),0,1.2);
+    dist += clamp((3 - (sot/shots))*4, -1.5, 2.5);
+    dist = clamp(dist, 7.5, 28);
+
+    // angle: influenced by crosses and build and opponent defense
+    let angle = 20 - clamp(final3/20,0,1.6) * 3 + clamp((build-5)*0.75,-3,3) + clamp((1 - (sot/shots))*12, -2, 6);
+    angle += clamp((oppDef/40),-2,3);
+    angle = clamp(angle, 6, 48);
+
+    return { dist: roundTo(dist,2), angle: roundTo(angle,2) };
+  }catch(e){
+    return { dist:16, angle:20 };
+  }
+}
+
+/* ===========================
+   PCS v4.1 tweak — more stable for mismatches
+   - Wraps pcs_v4_sim but adds smoothing and dynamic iters
+=========================== */
+function pcs_v41(team, opp){
+  try{
+    // dynamic iterations: more iterations for high imbalance
+    const shotsT = Math.max(1, safeNum(team.shots, 10));
+    const shotsO = Math.max(1, safeNum(opp.shots, 10));
+    const imbalance = clamp(Math.abs(shotsT - shotsO) / Math.max(shotsT, shotsO), 0, 1);
+    const iters = Math.round(800 + imbalance * 400); // 800..1200
+    const raw = pcs_v4_sim(team, opp, iters);
+    // smoothing: shrink extreme sd influence
+    raw.xTF = roundTo(raw.xTF * (0.92 + (1 - clamp(raw.sd / Math.max(0.01, raw.mean || 0.2), 0, 1)) * 0.08), 4);
+    raw.iterations = iters;
+    return raw;
+  }catch(e){
+    return pcs_v4_sim(team, opp, 800);
+  }
+}
+
+/* ===========================
+   New finalize_v242 — integrates everything
+   - keeps market light mode behavior (no lambda warp)
+   - uses tactical style, importance, elo, streak momentum, refined shot locs, pcs_v41
+=========================== */
+function finalize_v242(base, h, a, pcs, opts){
+  try{
+    opts = opts || {};
+    // tactical style (optional UI fields: h_style / a_style)
+    const hStyle = (document.getElementById('h_style')?.value) || opts.h_style || 'balanced';
+    const aStyle = (document.getElementById('a_style')?.value) || opts.a_style || 'balanced';
+    const tH = tacticalStyleImpact(hStyle);
+    const tA = tacticalStyleImpact(aStyle);
+
+    // importance (optional UI: match_type / match_stage)
+    const matchType = (document.getElementById('match_type')?.value) || opts.matchType || 'league';
+    const matchStage = (document.getElementById('match_stage')?.value) || opts.matchStage || '';
+    const imp = importanceFactor(matchType, matchStage);
+
+    // elo
+    const elo = eloInfluence(h.elo, a.elo);
+
+    // streak momentum from history
+    const streak = streakMomentum(h.name, a.name, 10);
+
+    // refine shot location if not present
+    if(!isValidNumber(h.dist_off) || !isValidNumber(h.angle_off)){
+      const r = refineShotLocation(h, a);
+      h.dist_off = r.dist; h.angle_off = r.angle;
+    }
+    if(!isValidNumber(a.dist_off) || !isValidNumber(a.angle_off)){
+      const r2 = refineShotLocation(a, h);
+      a.dist_off = r2.dist; a.angle_off = r2.angle;
+    }
+
+    // base lambdas adjusted by ICM (absensi)
+    const absH = computeICM(h.abs || "");
+    const absA = computeICM(a.abs || "");
+    let lambdaH = safeNum(base.H,1) * absH.atkPenalty * tH.atkMult * elo.multH * streak.mH * imp.weight;
+    let lambdaA = safeNum(base.A,1) * absA.atkPenalty * tA.atkMult * elo.multA * streak.mA * imp.weight;
+
+    // DPF influence (existing)
+    const dpfH = computeDPF(h,a);
+    const dpfA = computeDPF(a,h);
+    lambdaA *= clamp(1 - dpfH.pressure * 0.15 * tH.defMult, 0.5, 1.08);
+    lambdaH *= clamp(1 - dpfA.pressure * 0.15 * tA.defMult, 0.5, 1.08);
+
+    // PCS targets from pcs_v41 if available, else use pcs param
+    let pcsH = safeNum(pcs.H, lambdaH);
+    let pcsA = safeNum(pcs.A, lambdaA);
+    try{
+      const rawH = pcs_v41(h, a);
+      const rawA = pcs_v41(a, h);
+      pcsH = safeNum(rawH.xTF, pcsH);
+      pcsA = safeNum(rawA.xTF, pcsA);
+      pcs = Object.assign({}, pcs, { rawH: rawH, rawA: rawA });
+    }catch(e){ /* fallback to input pcs */ }
+
+    // mix toward pcs/xg-smoothed
+    lambdaH = lerp(lambdaH, pcsH, 0.30);
+    lambdaA = lerp(lambdaA, pcsA, 0.30);
+
+    // press influence scaled by tactical press multiplier
+    lambdaH *= clamp(1 + (pressToNum(h.press)-0.5) * 0.12 * tH.pressMult, 0.78, 1.22);
+    lambdaA *= clamp(1 + (pressToNum(a.press)-0.5) * 0.12 * tA.pressMult, 0.78, 1.22);
+
+    // vsm jitter scaled by MEL calibration and importance (reduce jitter for important matches)
+    const vsm = computeVSM(h,a);
+    const melFactor = mel_getFactor ? mel_getFactor() : 1.0;
+    const importanceReduce = 1 - clamp((imp.weight - 1) * 0.6, 0, 0.6); // more important -> less jitter
+    lambdaH *= clamp(1 + (vsm*0.05)*(v24_rand()-0.5) * melFactor * importanceReduce, 0.86, 1.12);
+    lambdaA *= clamp(1 + (vsm*0.05)*(v24_rand()-0.5) * melFactor * importanceReduce, 0.86, 1.12);
+
+    // finalize clamps
+    const finalH = roundTo(clamp(lambdaH, 0.02, 14), 4);
+    const finalA = roundTo(clamp(lambdaA, 0.02, 14), 4);
+
+    // market light (unchanged semantics)
+    const market = opts.market || null;
+    const marketInfo = computeMarketInfluence(market);
+
+    // confidence: base from prob3W, plus importance & market & streak influences
+    const probs = prob3W(finalH, finalA);
+    let baseConf = clamp(0.45 + Math.abs(probs.home - probs.away) * 0.5, 0.05, 0.98);
+    baseConf = baseConf * (1 + imp.confBoost) * (1 + marketInfo.confBoost) * clamp(1 + (streak.hScore - streak.aScore) * 0.02, 0.9, 1.08);
+    const conf = clamp(baseConf, 0.02, 0.995);
+
+    // varMultiplier: combine market & importance to adjust reported variance
+    const varMultiplier = clamp(marketInfo.varMultiplier * (1 - (imp.weight - 1) * 0.08), 0.6, 1.05);
+
+    const meta = {
+      dpfH, dpfA, pcs, mom: momentum_v24(h,a),
+      tactical: { hStyle, aStyle, tH, tA }, importance: imp, elo, streak
+    };
+
+    return { H: finalH, A: finalA, meta, confidence: roundTo(conf,3), varMultiplier: roundTo(varMultiplier,3) };
+  }catch(e){
+    console.warn('finalize_v242 error', e);
+    // fallback to older finalize v241
+    if(typeof finalize_v241 === 'function') return finalize_v241(base,h,a,pcs,opts);
+    return { H: safeNum(base.H,1), A: safeNum(base.A,1), meta:{}, confidence:0.5, varMultiplier:1.0 };
+  }
+}
+
+/* ===========================
+   Compatibility wrapper:
+   If analyzeMatch still calls finalize_v241, we provide a safe default that defers to v24.2
+=========================== */
+function finalize_v241_wrapper(base,h,a,pcs,opts){
+  // keep same semantics as older finalize_v241 but route to finalize_v242
+  return finalize_v242(base,h,a,pcs,opts);
+}
+// attach wrapper so old calls still work
+if(typeof window !== 'undefined'){
+  window.finalize_v242 = finalize_v242;
+  window.finalize_v241 = window.finalize_v241 || finalize_v241_wrapper;
+}
+</script>
 <!-- v24.1 CLEAN — PART 7/10
      analyzeMatch v24.1, UI hooks, result render, lightweight safety
 -->
