--- a/parlay_v25.html
+++ b/parlay_v25.html
@@ -119,7 +119,39 @@
         <input id="h_rest" placeholder="Rest Days">
         <input id="h_rotation" placeholder="Rotation Level (0-10)">
     </div>
+<!-- AUTO ENGINE BUTTONS (HOME) -->
+<div class="auto-block">
+<button class="auto-btn" onclick="autoBuildUp('h')">AUTO BUILD-UP</button>
+<button class="auto-btn" onclick="autoImportance('h')">AUTO IMPORTANCE</button>
+<button class="auto-btn" onclick="autoRotation('h')">AUTO ROTATION</button>
+<button class="auto-btn" onclick="autoPress('h')">AUTO PRESS</button>
+<button class="auto-btn" onclick="autoTactical('h')">AUTO TACTICAL</button>
+<button class="auto-btn" onclick="autoDefenseLevel('h')">AUTO DEFENSE</button>
+<button class="auto-btn" onclick="autoProgWeight('h')">AUTO PROG</button>
+<button class="auto-btn" onclick="autoFinal3('h')">AUTO F3</button>
+<button class="auto-btn" onclick="autoFinish('h')">AUTO FINISH Q</button>
+<button class="auto-btn" onclick="autoMode('h')">AUTO MODE</button>
+</div>
 
+<!-- AUTO ENGINE BUTTONS (AWAY) -->
+<div class="auto-block">
+<button class="auto-btn" onclick="autoBuildUp('a')">AUTO BUILD-UP</button>
+<button class="auto-btn" onclick="autoImportance('a')">AUTO IMPORTANCE</button>
+<button class="auto-btn" onclick="autoRotation('a')">AUTO ROTATION</button>
+<button class="auto-btn" onclick="autoPress('a')">AUTO PRESS</button>
+<button class="auto-btn" onclick="autoTactical('a')">AUTO TACTICAL</button>
+<button class="auto-btn" onclick="autoDefenseLevel('a')">AUTO DEFENSE</button>
+<button class="auto-btn" onclick="autoProgWeight('a')">AUTO PROG</button>
+<button class="auto-btn" onclick="autoFinal3('a')">AUTO F3</button>
+<button class="auto-btn" onclick="autoFinish('a')">AUTO FINISH Q</button>
+<button class="auto-btn" onclick="autoMode('a')">AUTO MODE</button>
+</div>
+
+<style>
+.auto-btn{margin:3px;padding:6px 10px;font-size:12px;background:#3e8ef7;color:#fff;border:none;border-radius:4px;cursor:pointer;}
+.auto-btn:hover{background:#357bd9;}
+.auto-block{margin-top:5px;margin-bottom:10px;}
+</style>
     <div class="col">
         <h3>Away Team</h3>
         <input id="a_name" placeholder="Nama Tim Away">
@@ -1273,6 +1305,7 @@ window._renderDPF_v25 = window._renderDPF_v25;
 window.runWorkerMarketCalc = runWorkerMarketCalc;
 
 </script>
+    
 <!-- v25 CLEAN — PART 9/10
      Advanced History Viewer · Export CSV/JSON · Legend · Small UI tweaks
 -->
@@ -1293,7 +1326,119 @@ function renderHistoryAdvanced(){
     // optional simple filter control (non-invasive)
     let filterVal = (document.getElementById("historyFilter") && document.getElementById("historyFilter").value) || "";
     filterVal = (filterVal || "").toString().trim().toLowerCase();
+function autoBuildUp(s){
+  const shots = num(s+"_shots");
+  const poss  = num(s+"_poss");
+  const prog  = num(s+"_prog");
+  const f3    = num(s+"_final3");
+  const press = val(s+"_press").toLowerCase();
 
+  let sc = poss/10 + prog/30 + f3/35;
+  if(press==="high") sc -= 1;
+  if(press==="gegenpress") sc -= 1.2;
+  if(press==="low") sc += 0.5;
+  if(shots>=17) sc -= 0.2;
+
+  sc = clamp(sc,1,10);
+  set(s+"_build",Math.round(sc));
+      }
+    function autoImportance(s){
+  const name  = val(s+"_team").toLowerCase();
+  const oname = val(op(s)+"_team").toLowerCase();
+  const elo   = num(s+"_elo");
+  const oelo  = num(op(s)+"_elo");
+  const press = val(s+"_press").toLowerCase();
+  const abs   = val(s+"_abs").toLowerCase();
+
+  let im = 1.0;
+
+  if(name && oname && name.slice(0,3)==oname.slice(0,3)) im += 0.12;
+  if(elo>=1750 && oelo>=1750) im += 0.12;
+  if(Math.abs(elo-oelo)>=180) im -= 0.15;
+  if(press==="high"||press==="gegenpress") im += 0.08;
+  if(abs.includes("fw")||abs.includes("md")||abs.includes("df")) im -= 0.10;
+
+  im = clamp(im,0.65,1.25);
+  set(s+"_importance",im.toFixed(2));
+    }  
+function autoRotation(s){
+  const abs = val(s+"_abs").toLowerCase();
+  const press = val(s+"_press").toLowerCase();
+  const imp = num(s+"_importance");
+
+  let r=0;
+  if(abs.includes("fw")) r++;
+  if(abs.includes("md")) r++;
+  if(abs.includes("df")) r++;
+  if(abs.includes("gk")) r++;
+
+  if(press==="high"||press==="gegenpress") r-=0.5;
+  if(imp<0.85) r+=1;
+
+  r = clamp(r,0,5);
+  set(s+"_rotation",Math.round(r));
+    }
+      function autoPress(s){
+  const poss = num(s+"_poss");
+  const prog = num(s+"_prog");
+
+  let p="medium";
+  if(prog>=28 && poss>=55) p="high";
+  if(prog>=32) p="gegenpress";
+  if(poss<=40) p="low";
+
+  set(s+"_press",p);
+    }
+     function autoTactical(s){
+  const poss = num(s+"_poss");
+  const build= num(s+"_build");
+  let t="balanced";
+
+  if(build>=8 && poss>=58) t="possession";
+  if(build<=3 && poss<=42) t="direct";
+  if(poss>=60) t="slow-build";
+  if(poss<=38) t="counter";
+
+  set(s+"_tact",t);
+    }
+      function autoDefenseLevel(s){
+  const inter=num(s+"_inter");
+  const press=val(s+"_press").toLowerCase();
+
+  let d=5;
+  if(inter>=12) d+=1;
+  if(press==="high"||press==="gegenpress") d+=0.5;
+  if(press==="low") d-=1;
+
+  d=clamp(d,1,10);
+  set(s+"_deflvl",d);
+    }
+      function autoProgWeight(s){
+  const prog=num(s+"_prog");
+  let w = clamp(prog/30,0.5,2.0);
+  set(s+"_progW",w.toFixed(2));
+    }
+    function autoFinal3(s){
+  const f3=num(s+"_final3");
+  let w = clamp(f3/30,0.5,2.0);
+  set(s+"_f3W",w.toFixed(2));
+          }  
+      function autoFinish(s){
+  const sots=num(s+"_sot");
+  const sh=num(s+"_shots");
+  let fq = clamp(sots/Math.max(sh,1),0.1,1);
+  set(s+"_finishQ",fq.toFixed(2));
+}
+
+function autoMode(s){
+  const name=val(s+"_team").toLowerCase();
+  let imp=num(s+"_importance");
+
+  if(name.includes("cup")||name.includes("final")||name.includes("ucl"))
+    imp+=0.22;
+
+  set(s+"_importance",clamp(imp,0.6,1.3).toFixed(2));
+    }
     for(const item of list){
       try{
         const hname = (item.home.name || "").toString();
@@ -1475,6 +1620,8 @@ window.showInspectModal = showInspectModal;
 window.renderLegends = renderLegends;
 
 </script>
+    
+  
 <!-- v25 CLEAN — PART 10/10
      Final safety checks · wrappers · compatibility · close HTML
 -->
